Bug Fix: Bug # On project screen project complete % section is not displaying on mobile. Problem: this blog was made hidden on mobile screen using media query. Solution:- Now this section is displayed on mobile screen.
Update: Rework# Add spinner when clicked on reinvestment button.
Details:- Spinner is added when clicked on reinvestment button.

Update: Rework#Remove slider from active project section.
Details:- Removed slider from active project section.

--- a/revolv/static/css/screen.css
+++ b/revolv/static/css/screen.css
@@ -8469,7 +8469,6 @@ width: 580px;
         width: 172px;
         height: 172px;
         padding: 8px;
-        margin: 0 0 0 -86px;
         bottom: 0;
     }
     .details-active-project-module .banner-section .funded-round .round-depict {
@@ -9694,12 +9693,6 @@ width: 580px;
         display: none;
     }
 
-    .details-active-project-module .banner-section {
-        display: none;
-    }
-    .details-active-project-module .info-main {
-        display: none;
-    }
     .details-active-project-module .txt-area1 {
         margin-bottom: 0;
     }
@@ -11245,8 +11238,7 @@ width: 580px;
         width: 86px;
         height: 86px;
         padding: 4px;
-        margin: 0 0 0 -43px;
-
+        margin-top: 24px;
     }
     .details-active-project-module .banner-section .funded-round .round-depict {
         font-size: 9.66px;
@@ -13173,7 +13165,9 @@ and (orientation : landscape) {
 .pull-right {
     display:none;
 }
-
+.details-active-project-module .info-section .info-main .pull-right {
+    display: block;
+}
 .go_solar_at_home {
     width: 59vmin;
     margin-top: 15vmin;
@@ -14457,3 +14451,17 @@ form#change_password_form label {
         width: 50%;
     }
 }
+#reinvest-spinner {
+    display: none;
+    width: 100%;
+    height: 100%;
+    z-index: 1050;
+    background-color: rgba(0,0,0,0.4);
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+}
+#reinvest-spinner img {
+    width: 50px;
+    height: 50px;
+ }
